--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <script src="p5.play.js"></script>
       <script src="matter.js"></script>
       <script src="paper.js"></script>
-      <script src="Ground.js"></script>
+      <script src="ground.js"></script>
       <script src= "dustbin.js"></script>
       
 
